add next step guide pages, update results styles, add content (#28)
First pass at updating everything for user testing on Playbook UX for the "next steps" to confirm RS status and Portfolio Size.

Still need to refactor the content boxes to add some nested components now that designs are being finalized. Also still need to hook up the portfolio guide page to insert acris data.

I also accidentally ran prettier on everything so there are a bunch of unrelated formatting changes..
