# src/Components/Pages/APIDocs/APISpec.json
@@ -12,7 +12,7 @@
   ],
   "components": {
     "schemas": {
-      "AcrisProperty": {
+      "ACRISProperty": {
         "properties": {
           "bbl": {
             "type": "string",
@@ -33,6 +33,61 @@
             "type": "integer",
             "example": 45,
             "description": "Number of residential units in the associated property"
+          }
+        }
+      },
+      "ACRISDocument": {
+        "properties": {
+          "doc_id": {
+            "type": "string",
+            "example": "2022030100595001",
+            "description": "ACRIS document ID, used to link to document details."
+          },
+          "doc_type": {
+            "type": "string",
+            "example": "AGMT",
+            "description": "ACRIS document type (AGMT, MTGE, AL&R)"
+          }
+        }
+      },
+      "WOWProperty": {
+        "properties": {
+          "bbl": {
+            "type": "string",
+            "example": "3071980006",
+            "description": "Borough-Block-Lot of the associated property, 10-digit zero-padded"
+          },
+          "distance_ft": {
+            "type": "number",
+            "example": "103.59",
+            "description": "Distance from the user's building to this property, in feet."
+          },
+          "match_name": {
+            "type": "boolean",
+            "example": "true",
+            "description": "Whether the primary contact name on the user's building's HPD registration exactly matches with this property."
+          },
+          "match_bizaddr_unit": {
+            "type": "boolean",
+            "example": "false",
+            "description": "Whether the primary contact business address on the user's building's HPD registration exactly matches with this property, including the unit number."
+          },
+          "match_bizaddr_nounit": {
+            "type": "boolean",
+            "example": "true",
+            "description": "Whether the primary contact business address on the user's building's HPD registration exactly matches with this property, excluding the unit number."
+          },
+          "unitsres": {
+            "type": "integer",
+            "example": 45,
+            "description": "Number of residential units in the associated property"
+          },
+          "acris_docs": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ACRISDocument"
+            },
+            "description": "Array of up to 5 ACRIS document IDs, in order by date"
           }
         }
       },
@@ -98,12 +153,31 @@
             "example": "Article XI",
             "description": "Name of the subsidy program the building has, from Furman Center's Subsidized Housing Database and Article XI data"
           },
+          "acris_docs": {
+            "type": "array",
+            "items": "string",
+            "example": [
+              "2021121300683017",
+              "2021121300683018",
+              "2021121300683016",
+              "2016120901123004",
+              "2016120901123005"
+            ],
+            "description": "Array of up to 5 ACRIS document IDs, in order by date"
+          },
           "acris_data": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/AcrisProperty"
+              "$ref": "#/components/schemas/ACRISProperty"
             },
-            "description": "Array of properties that appear in mortgages/agrements alongside the search address property"
+            "description": "Array of properties that appear in ACRIS documents (MTGE,AGMT,AL&R) alongside the search address property"
+          },
+          "wow_data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/WOWProperty"
+            },
+            "description": "Array of properties within the search address property's WOW portfolio, with additional fields for prioritization."
           }
         }
       }
